Sign up/in/out and simple profile implementation

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Tagmar</title>
+  <title><%= t('.title', default: t('defaults.title')) %></title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <%= stylesheet_link_tag    "application", media: "all" %>
-  <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body class="<%= yield :body_class %>">
 
-<%= yield %>
+<header>
+  <%= content_for?(:header) ? yield(:header) : render('header') %>
+</header>
 
+<%= yield :jumbotron %>
+
+<div class="container-fluid">
+  <%= yield %>
+</div>
+
+<footer>
+  <%= content_for?(:footer) ? yield(:footer) : render('footer') %>
+</footer>
+
+<%= javascript_include_tag "application" %>
 </body>
 </html>
