--- a/app/assets/stylesheets/external.css.scss
+++ b/app/assets/stylesheets/external.css.scss
@@ -1,6 +1,3 @@
-@import "compass/css3/box-sizing";
-@import "compass/css3/border-radius";
-
 body.external-form {
   padding-top: 40px;
   padding-bottom: 40px;
@@ -26,7 +23,7 @@ body.external-form {
     height: auto;
     padding: 10px;
 
-    @include box-sizing(border-box);
+    box-sizing: border-box;
   }
 
   .form-control:focus {
@@ -49,6 +46,6 @@ body.external-form {
 .form-forgot-password {
   input[type="email"] {
     margin-bottom: 10px;
-    @include border-radius(4px);
+    border-radius: 4px;
   }
 }
