--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -9,7 +9,9 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require app-bootstrap
+ *= require app-font-awesome
  *= require external
  *= require feedback
+ *= require mockups
  *= require_self
  */
